--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,20 +1,17 @@
 .ModalBackdrop {
   position: fixed;
   left: 0;
-  right: 0;
+  top: 0;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
 .ModalContent {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50, -50%);
-  max-width: 600px;
-  min-height: 300px;
-  width: 100%;
-  padding: 12px;
-  background-color: blanchedalmond;
-  border-radius: 5px;
+  transform: translate(-50%, -50%);
 }
